--- a/style.css
+++ b/style.css
@@ -81,3 +81,14 @@
   text-align: justify;
   width: 90%;
 }
+
+.footer {
+  border-top: 1px solid grey;
+  width: 90%;
+  margin: auto;
+  padding: 10px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  color: grey;
+}
