--- a/style.css
+++ b/style.css
@@ -76,6 +76,14 @@
   justify-content: space-between;
 }
 
+.delete-btn {
+  display: none;
+}
+
+.todo:hover .delete-btn {
+  display: flex;
+}
+
 .todo-task {
   padding: 0px 10px;
   text-align: justify;
@@ -91,4 +99,13 @@
   display: flex;
   justify-content: space-between;
   color: grey;
+}
+
+.choices span {
+  cursor: pointer;
+}
+
+.bold {
+  font-weight: bold;
+  color: black;
 }
