--- a/style.css
+++ b/style.css
@@ -63,17 +63,24 @@
   border-bottom: 1px solid grey;
 }
 
+.operations > div {
+  cursor: pointer;
+}
+
 .todos {
   width: 90%;
   margin: auto;
-  border: 1px solid grey;
+  /* border: 1px solid grey; */
   padding: 10px;
 }
 
 .todo {
   text-align: justify;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  border-bottom: 1px solid grey;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .delete-btn {
@@ -89,6 +96,7 @@
   padding: 0px 10px;
   text-align: justify;
   width: 90%;
+  word-spacing: 10px;
 }
 
 .footer {
