--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
   background-color: transparent;
   border: none;
   margin: 0px 4px 0px 4px;
+  color: grey;
 }
 
 #input-todo:focus {
@@ -72,6 +73,23 @@
   margin: auto;
   /* border: 1px solid grey; */
   padding: 10px;
+  max-height: 60vh;
+  overflow-y: scroll;
+}
+
+.todos::-webkit-scrollbar {
+  background-color: transparent;
+  width: 6px;
+}
+
+.todos::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(
+    0deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 35%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  border-radius: 6px;
 }
 
 .todo {
@@ -81,6 +99,7 @@
   border-bottom: 1px solid grey;
   padding-bottom: 10px;
   margin-bottom: 10px;
+  min-height: 50px;
 }
 
 .operation-btn {
