--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
   width: 70%;
   margin: auto;
   box-shadow: 0px 0px 3px 1px grey;
+  background-color: #ffdee9;
+  background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
+  background-color: #21d4fd;
+  background-image: linear-gradient(19deg, #21d4fd 0%, #b721ff 100%);
 }
 
 .input {
@@ -102,6 +106,35 @@
   min-height: 50px;
 }
 
+.todo > div {
+  margin-top: 10px;
+}
+
+.todo:hover {
+  /* background-color: #d9afd9;
+  background-image: linear-gradient(0deg, #d9afd9 0%, #97d9e1 100%);
+  background-color: #00dbde;
+  background-image: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
+  background-color: #00dbde;
+  background-image: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
+  background-color: #52acff;
+  background-image: linear-gradient(180deg, #52acff 25%, #ffe32c 100%);
+  background-color: #52acff; */
+  background-image: linear-gradient(180deg, #52acff 25%, #ffe32c 100%);
+  background-color: #fa8bff;
+
+  color: white;
+  cursor: pointer;
+}
+
+.todo:hover .delete-btn {
+  color: red;
+}
+
+.todo:hover .update-btn {
+  color: yellow;
+}
+
 .operation-btn {
   display: none;
   cursor: pointer;
@@ -139,4 +172,32 @@
 .bold {
   font-weight: bold;
   color: black;
+}
+
+@media screen and (max-width: 1000px) {
+  .main {
+    width: 80%;
+  }
+  .container {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .main {
+    width: 90%;
+  }
+
+  .container {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  body {
+    overflow-x: hidden;
+  }
+  .main {
+    width: 100%;
+  }
 }
